# breadth.me

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
src/: auth.rs  config.rs  error.rs  main.rs  metrics.rs  utils.rs
src/api/: mod.rs  params.rs  requests.rs  response_object.rs
src/entities/: mod.rs
src/entities/us_stock/: factor_breadth_std.rs  factor_rs.rs  mod.rs  stock_info.rs  stock_sector_ma20.rs  table_update_log.rs
